--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongoose": "^6.4.4",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.19",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "sha256": "^0.2.0"
   }
 }
